FIX: class with icon size used for button logout on mobile

--- a/src/styles/components/settings/_account.scss
+++ b/src/styles/components/settings/_account.scss
@@ -60,7 +60,6 @@
     content: "\E63D";
     color: $secondary-color;
     @include position-center;
-    font-size: 24px;
   }
 }
 
